--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ dependencies = [
     "django-ninja-jwt==5.3.0",
     "django-soft-delete>=1.0.19",
     "email-validator>=2.3.0",
+    "django-cors-headers==4.3.1",
 ]
 
 [tool.setuptools.packages.find]
