add vector embeddings support for postgres

--- a/.env.sample
+++ b/.env.sample
@@ -1,19 +1,33 @@
-# Django Settings
-DEBUG=True
-SECRET_KEY='your-local-secret-key-that-is-not-used-in-production'
+# Django Core Settings
+SECRET_KEY=your-secret-key-here-change-in-production
 DJANGO_SETTINGS_MODULE=core.settings.development
+DEBUG=True
 
-# Database URL for Django (used by django-environ)
-# The host 'db' is the service name from docker-compose.yml
-DATABASE_URL=postgres://postgres:password@db:5432/ai_api_db
-
+# Database Configuration
+DATABASE_URL=postgres://username:password@host:port/database_name
 # PostgreSQL credentials for the 'db' service in docker-compose
 POSTGRES_DB=ai_api_db
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=password
 
-# Celery Broker URL (using Redis database 0)
-CELERY_BROKER_URL=redis://redis:6379/0
+# Redis Configuration (optional - if not set, uses in-memory for channels/celery)
+REDIS_URL=redis://localhost:6379/0
+CELERY_BROKER_URL=redis://localhost:6379/1
 
-# Redis URL for Django Channels (using Redis database 1)
-REDIS_URL=redis://redis:6379/1
+# AWS Configuration - Boto3 Credentials
+AWS_ACCESS_KEY_ID=your_aws_access_key_id
+AWS_SECRET_ACCESS_KEY=your_aws_secret_access_key
+AWS_SESSION_TOKEN=optional_session_token_for_temporary_credentials
+AWS_REGION=us-east-1
+
+# AWS Service Configuration
+AGENT_MODEL_ID=amazon.nova-lite-v1:0
+SPEECH_TO_SPEECH_MODEL_ID=amazon.nova-sonic-v1:0
+AWS_S3_BUCKET_NAME=your-s3-bucket-name
+AWS_TRANSCRIBE_BUCKET=your-transcribe-bucket-name
+
+# CORS Configuration
+CORS_ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
+
+# Logging
+LOG_LEVEL=DEBUG
