--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,11 @@ dependencies = [
     "django-soft-delete>=1.0.19",
     "email-validator>=2.3.0",
     "django-cors-headers==4.3.1",
+    "strands-agents>=1.9.1",
+    "strands-agents-tools>=0.2.0",
+    "strands-agents-builder>=0.1.10",
+    "jinja2>=3.1.6",
+    "python-frontmatter>=1.1.0",
 ]
 
 [tool.setuptools.packages.find]
